origin class button & filtered grids

--- a/src/content/docs/en/introduction/entity-list.mdx
+++ b/src/content/docs/en/introduction/entity-list.mdx
@@ -4,6 +4,5 @@ description: "All of the battle entities with their origins and classes"
 ---
 
 import PageEntityGrid from "../../../../components/PageContent/PageEntityGrid.astro";
-export let filterText = "";
 
-<PageEntityGrid gridFilter={filterText}  />
+<PageEntityGrid gridFilter=""  />
