Shit Don't Work For Some Reason - Building Timeline Roadmap

--- a/src/content/docs/en/introduction/roadmap.mdx
+++ b/src/content/docs/en/introduction/roadmap.mdx
@@ -2,3 +2,30 @@
 title: "Roadmap"
 description: "Past activities and future roadmap for the project"
 ---
+
+import PageTimelineRoadmap from "../../../../components/PageContent/PageTimelineRoadmap.astro";
+
+export let futureRoadmapElements = [
+	{
+		titleText: "Data Structure",
+		descText: "How the static game data is stored and retrieved by the game",
+		dateText: "10.04.2023",
+	},
+	{
+		titleText: "Data Structure",
+		descText: "How the static game data is stored and retrieved by the game",
+		dateText: "10.04.2023",
+	},
+    {
+		titleText: "Data Structure",
+		descText: "How the static game data is stored and retrieved by the game",
+		dateText: "10.04.2023",
+	},
+    {
+		titleText: "Data Structure",
+		descText: "How the static game data is stored and retrieved by the game",
+		dateText: "10.04.2023",
+	}
+];
+
+<PageTimelineRoadmap futureTimelineElements={futureRoadmapElements} />
