Fixed A Shit Lot Of Stuff - Turned Back To ContentCollection

--- a/src/content/introduction/welcome.mdx
+++ b/src/content/introduction/welcome.mdx
@@ -1,7 +1,12 @@
 ---
 title: "Welcome"
 description: "Game Documentation Introduction Landing Page"
+date: 2022-13-03
 ---
+
+import PageDateBar from "../../components/PageContent/PageDateBar.astro";
+
+<PageDateBar dateString={new Date().toLocaleDateString()} />
 
 This is the `docs` starter template. It contains all of the features that you need to build a Markdown-powered documentation site, including:
 
