--- a/src/content/devlog/website-launch.mdx
+++ b/src/content/devlog/website-launch.mdx
@@ -1,9 +1,12 @@
 ---
 title: "Website Launch"
 description: "Devlog Documentation"
+date: 2023-03-17
 ---
 
-**`⠀⠀Log Date: 20.03.2023⠀⠀`**
+import PageDateBar from "../../components/PageContent/PageDateBar.astro";
+
+<PageDateBar dateString={frontmatter.date} />
 
 I have tried a couple of documentation tools for planning; but every choice I tried felt like a **hassle** more than a helpful guide for my game development process.
 
