Data Structure - ID Ref

--- a/src/content/devlog/data-structure.mdx
+++ b/src/content/devlog/data-structure.mdx
@@ -28,7 +28,7 @@ In terms of usage, I will be having a set of static data that I will only read a
 - Class Base Data
 - Origin Base Data
 - Skill Base Data
-- Equipment Base Data
+- Equipment Base Dat
 - Configuration Data
 
 I will also need a set of dynamic data that I will read and write constantly. These will be : 
