Origin Class List And Sprite

--- a/src/content/devlog/content-preparation.mdx
+++ b/src/content/devlog/content-preparation.mdx
@@ -6,15 +6,15 @@ date: 2023-04-21
 
 import PageDateBar from "../../components/PageContent/PageDateBar.astro";
 
-<PageDateBar dateString={frontmatter.date} />
+<PageDateBar dateTitle="Log Date" dateString={frontmatter.date} />
 
-Now that I have the basic data structure and some analytics tools them in my hands, it is time to actually place the content in the project.
+Now that I have the basic data structure and some analytics tools in my hands, it is time to actually place the content in the project.
 
 This week I have focused on `data` and `asset` preparation of the project. There are some areas that I fell short and some areas that I got lucky.
 
 ## Graphical Interface Assets
 
-One of the benefits of doing this game development thing for a loooong time is that you start having assets/templates that you use in every project.
+One of the benefits of doing this game development thing for a long time is that you start having assets/templates that you use in every project.
 
 I have very handy **GUI** folder that has all kind of sprites that I _collected/created_ throughout these years. So I don't think I will need to any research on this department.
 
@@ -22,7 +22,7 @@ I can achieve the desired look with what I have in my hand up until the publishi
 
 ## Entity & Object Assets
 
-What started this project in my mind was `Super Auto Pets` & `Slay the Spire`. So I knew that I needed lots of animal model variety in the project to do what I want.
+What started this project in my mind was [Super Auto Pets](https://store.steampowered.com/app/1714040/Super_Auto_Pets/) and [Slay the Spire](https://store.steampowered.com/app/646570/Slay_the_Spire/). So I knew that I needed lots of animal model variety in the project to do what I want.
 
 Even though the dream of having everything custom made is very lovely, the amount of unfinished projects taught me to stick to my strong suits and throw money at things that I suck at : )
 
@@ -32,7 +32,7 @@ It includes basic animations and lovely models with enough variety to build a ro
 
 ## Audio Assets
 
-I have some ideas on what to do with music tracks. I know a lot of cool indie artists from working together in game jams before. But the `SFX` part is kind of tricky.
+I have some ideas on what to do with `music` tracks. I know a lot of cool indie artists from working together in game jams before who can handle that part. But the `SFX` part is kind of tricky.
 
 The entity asset package that I decided to go with doesn't have sound effects for the respective animals. And from what I gathered on the web, it would take a lot of time for me to find a specific sound effects for all of the animals and their respective actions that I will have in the game.
 
@@ -69,6 +69,10 @@ Calling this basic procedure a pipeline is kinda stupid; but I don't have anothe
 
 As I planned in the [previous devlogs](https://ahmetahaydemir.dev/wild-chess-simulator/devlog/data-structure#data-fetching), I built a small script in `Unity` that looks at the specific endpoints that I placed on this site.
 
-Then the manual parsing procedure starts in Unity according to the data structure I declared in here and serialized data is stored in [scriptable objects](https://docs.unity3d.com/2023.2/Documentation/Manual/class-ScriptableObject.html) under a specific folder.
+Then the manual parsing procedure starts in Unity according to the data structure I declared in here and serialized data is stored in [scriptable objects](https://docs.unity3d.com/2023.2/Documentation/Manual/class-ScriptableObject.html) and [text assets](https://docs.unity3d.com/2023.2/Documentation/ScriptReference/TextAsset.html) under a specific folder.
 
 And that's basically all. Now, everytime I publish a change in this site's endpoint, the data used in game will be updated as well.
+
+Here is how that automatically generated folder looks in Unity.
+
+![Database folder in Unity](/image/DatabaseFolder.png "Database folder in Unity")
