--- a/src/content/devlog/data-structure.mdx
+++ b/src/content/devlog/data-structure.mdx
@@ -6,7 +6,7 @@ date: 2023-03-25
 
 import PageDateBar from "../../components/PageContent/PageDateBar.astro";
 
-<PageDateBar dateString={frontmatter.date} />
+<PageDateBar dateTitle="Log Date" dateString={frontmatter.date} />
 
 This week I spent some time on how will I input my data, in what format I will store it and how will the data be retrieved.
 
