--- a/src/content/devlog/descriptive-analytics.mdx
+++ b/src/content/devlog/descriptive-analytics.mdx
@@ -6,7 +6,7 @@ date: 2023-04-18
 
 import PageDateBar from "../../components/PageContent/PageDateBar.astro";
 
-<PageDateBar dateString={frontmatter.date} />
+<PageDateBar dateTitle="Log Date" dateString={frontmatter.date} />
 
 My main profession in real life is digital analytics. I have integrated countless martech tools and had a chance to see what works out in practice and what don't.
 
