--- a/src/content/devlog/website-launch.mdx
+++ b/src/content/devlog/website-launch.mdx
@@ -6,7 +6,7 @@ date: 2023-03-17
 
 import PageDateBar from "../../components/PageContent/PageDateBar.astro";
 
-<PageDateBar dateString={frontmatter.date} />
+<PageDateBar dateTitle="Log Date" dateString={frontmatter.date} />
 
 I have tried a couple of documentation tools for planning; but every choice I tried felt like a **hassle** more than a helpful guide for my game development process.
 
