--- a/src/content/introduction/roadmap.mdx
+++ b/src/content/introduction/roadmap.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Roadmap"
 description: "Past activities and future roadmap for the project"
-date: 2022-12-03
+date: 9999-99-99
 ---
 
 import PageDateBar from "../../components/PageContent/PageDateBar.astro";
 
-<PageDateBar dateString={new Date().toLocaleDateString()} />
+<PageDateBar dateTitle="Last Updated" dateString={new Date().toLocaleDateString()} />
