--- a/src/content/introduction/welcome.mdx
+++ b/src/content/introduction/welcome.mdx
@@ -1,19 +1,19 @@
 ---
 title: "Welcome"
 description: "Game Documentation Introduction Landing Page"
-date: 2022-13-03
+date: 9999-99-99
 ---
 
 import PageDateBar from "../../components/PageContent/PageDateBar.astro";
 
-<PageDateBar dateString={new Date().toLocaleDateString()} />
+<PageDateBar dateTitle="Last Updated" dateString={new Date().toLocaleDateString()} />
 
-This is the `docs` starter template. It contains all of the features that you need to build a Markdown-powered documentation site, including:
+This is the documentation for `Wild Chess Simulator` game development project I am working on.
 
-- ✅ **Full Markdown support**
-- ✅ **Responsive mobile-friendly design**
-- ✅ **Sidebar navigation**
-- ✅ **Search (powered by Algolia)**
-- ✅ **Multi-language i18n**
-- ✅ **Automatic table of contents**
-- ✅ **Automatic list of contributors**
+It is basically a project I started after playing [Super Auto Pets](https://store.steampowered.com/app/1714040/Super_Auto_Pets/) and [Slay the Spire](https://store.steampowered.com/app/646570/Slay_the_Spire/). I will take the cool things from both of them and add my own spin.
+
+The goal is to finish it, publish it on Steam and develop it until I am out of ideas for this project. It would be also nice if a small community is also built along that way, but that is a distant dream.
+
+I will develop it regardless to experience what it is like to **maintain a desktop game**.
+
+Especially a rogue-like since it is my favourite genre ❤️
