--- a/src/content/devlog/gameplay-loop.mdx
+++ b/src/content/devlog/gameplay-loop.mdx
@@ -70,7 +70,7 @@ Since you can analyze your session with playback, it would also make sense to gi
 
 ![SimulationRestShot](/image/SimulationRestShot.png "SimulationRestShot")
 
-## Run Summary
+## Gameplay Summary
 
 Now that we declared what sections are there and what are their core functionalities, I can summarize how a fresh run would go in a flow graph.
 
