Node Map Section Markdown

--- a/src/content/devlog/data-structure.mdx
+++ b/src/content/devlog/data-structure.mdx
@@ -38,6 +38,7 @@ In terms of usage, I will be having a set of static data that I will only read a
 -   Class Base Data
 -   Origin Base Data
 -   Skill Base Data
+-   Zone Base Data
 -   Configuration Data
 
 ![File Relations](/image/fileRelations.png "File Relations")
@@ -63,6 +64,7 @@ Then I can use these endpoints to stay in sync and try out different data sets w
 -   https://ahmetahaydemir.dev/wild-chess-simulator/api/getOriginData.json
 -   https://ahmetahaydemir.dev/wild-chess-simulator/api/getSkillData.json
 -   https://ahmetahaydemir.dev/wild-chess-simulator/api/getObjectData.json
+-   https://ahmetahaydemir.dev/wild-chess-simulator/api/getZoneData.json
 -   https://ahmetahaydemir.dev/wild-chess-simulator/api/getConfigData.json
 
 This will allow me to update the data once in that static endpoint and see the results in the website and the game simultaneously.
